--- a/app/src/main/res/layout/fragment_add_person.xml
+++ b/app/src/main/res/layout/fragment_add_person.xml
@@ -4,11 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListFrag">
+    android:background="@color/colorPrimary"
+    tools:context=".AddPersonFrag">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
 </LinearLayout>
