--- a/app/src/main/res/layout/fragment_add_person.xml
+++ b/app/src/main/res/layout/fragment_add_person.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +8,16 @@
     android:background="@color/colorPrimary"
     tools:context=".AddPersonFrag">
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:id="@+id/fab"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/addition"
+        app:elevation="4dp"
+        app:layout_anchorGravity="bottom|right|end" />
 
 
-</LinearLayout>
+
+</FrameLayout>
