--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/listFrag"
         android:name="com.example.balance_tracker.ListFrag"
         android:layout_width="0dp"
         android:layout_height="match_parent"
