--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -15,7 +15,7 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="Enter Updated Amount"
-        android:inputType="textPersonName" />
+        android:inputType="number" />
 
     <Button
         android:id="@+id/btnAdd"
