--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/fragment2"
+            android:id="@+id/updateFrag"
             android:name="com.example.balance_tracker.DetailFrag"
             android:layout_width="match_parent"
             android:layout_weight="1"
@@ -31,7 +31,7 @@
             tools:layout="@layout/fragment_detail" />
 
         <fragment
-            android:id="@+id/fragment3"
+            android:id="@+id/detailFrag"
             android:name="com.example.balance_tracker.UpdateFrag"
             android:layout_width="match_parent"
             android:layout_weight="1"
